Fix: Mobile: Fix tag overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,8 @@ a {
   width: 80%;
   margin: 0 auto;
   position: relative;
+
+  overflow-wrap: break-word;
 }
 
 .content p {
@@ -80,6 +82,8 @@ a {
   padding: 5px;
   background-color: #636e72;
   color: white;
+
+  display: inline-block;
 }
 
 .tag:hover {
